<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.laluna_team.dtufeedbackv2.SignUpActivity"
        android:padding="16dp">
        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/layout_guideline"
            app:layout_constraintGuide_begin="100dp"
            android:orientation="horizontal" />
        <ImageView
            android:id="@+id/avatar_imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layout_guideline"
            android:background="@color/colorAccent"/>
        <EditText
            android:id="@+id/name_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar_imageView"
            android:hint="@string/name"
            android:inputType="textCapWords" />
        <EditText
            android:id="@+id/email_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_editText"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/password_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_editText"
            android:hint="@string/password"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/password_confirm_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_editText"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_confirm_editText"
            android:text="@string/sign_up"/>
        <TextView
            android:id="@+id/login_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_button"
            android:text="@string/login_here"/>
    </android.support.constraint.ConstraintLayout>
</layout>
